# pybvvd-dev

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  patch_swagger.py  pyproject.toml  readthedocs.yaml
.github/: CODEOWNERS  dependabot.yml
.github/actions/set-up-python-env/: action.yml
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml  pr-ci.yml  test.yml  typecheck.yml
datamodel-codegen-config/: aliases.json
docs/: api-reference.md  index.md  usage.md
docs/assets/css/: table.css
pybvvd/: __init__.py  exceptions.py  oauth2.py
pybvvd/api/: __init__.py  _generated.py
pybvvd/client/: __init__.py  _client.py  _token_manager.py
requirements/: covreport.txt  docs.txt  lint.txt  test.txt  typecheck.txt
scripts/: __init__.py  _utils.py  covreport.py  format.py  lint.py  test.py  typecheck.py
tests/: test_client.py  test_token_manager.py
