[build-system]
requires = ["hatchling >= 1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pybvvd"
dynamic = ["version"]
description = "SDK for Bolagsverket's Värdefulla Datamängder API."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "BSD-3-Clause"
authors = [{ name = "Jesper Johansson", email = "jesperpjohansson@gmail.com" }]
keywords = ["bolagsverket", "sdk", "httpx", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
]

[project.urls]
Documentation = "https://pybvvd.readthedocs.io/"
Repository = "https://github.com/jesperpjohansson/pybvvd-dev"
Issues = "https://github.com/jesperpjohansson/pybvvd-dev/issues"

[project.optional-dependencies]
dev = [
  "mypy",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

# ≡≡≡ hatch ≡≡≡

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pybvvd"]

# ≡≡≡ ruff ≡≡≡

[tool.ruff]
target-version = "py312"
output-format = "pylint"
include = [
  "pyproject.toml",
  "pybvvd/**/*.py",
  "tests/**/*.py",
  "patch_swagger.py"
]
exclude = ["pybvvd/api/_generated.py"]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "ANN003",  # missing-type-kwargs
  "COM812",  # missing-trailing-comma
  "D105"     # undocumented-magic-method
]

[tool.ruff.lint.per-file-ignores]

"tests/**" = [
  "ANN",     # flake8-annotations
  "D",       # pydocstyle
  "ARG001",  # unused-function-argument
  "BLE001",  # blind-except
  "C901",    # complex-structure
  "PLR2004", # magic-value-comparison
  "S101",    # assert
  "S106",    # hardcoded-password-func-arg
  "S107",    # hardcoded-password-default
  "SLF001",  # private-member-access
  "TRY002",  # raise-vanilla-class
]

"patch_swagger.py" = [
  "D101",    # undocumented-public-class
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "D105",    # undocumented-magic-method
  "D106",    # undocumented-public-nested-class
  "D107",    # undocumented-public-init
  "S603",    # subprocess-without-shell-equals-true
  "S607",    # start-process-with-partial-path
  "T201",    # print
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

# ≡≡≡ mypy ≡≡≡

[tool.mypy]
python_version = "3.12"
files = ["pybvvd/**/*.py", "patch_swagger.py"]
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

# ≡≡≡ pytest ≡≡≡

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
  
[tool.coverage.run]
source = ["pybvvd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:"]

# ≡≡≡ datamodel-codegen ≡≡≡

[tool.datamodel-codegen]
input-file-type = "openapi"
output = "pybvvd/api/_generated.py"
schema-version = "3.0"
schema-version-mode = "strict"
target-python-version = "3.12"
field-constraints = true
use-schema-description = true
extra-fields = "forbid"
aliases = "datamodel-codegen-config/aliases.json"
formatters = []
